# mbo_utilities

./: .bashrc  .buildinfo  .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG_v2.5.0.md  CLAUDE.md  LICENSE.md  MANIFEST.in  MIGRATION.md  README.md  Untitled.ipynb  array_types.html  assembly.html  canonical_metadata.html  cheat_sheet.pptx  debug_output.txt  development.html  dff.html  examples_merge_zarr.py  fiber_activity.html  file_formats.html  forking.html  genindex.html  glossary.html  image_gallery.html  index.html  install.html  isoview_metadata.md  logging.md  mbo_cpu_fallback.py  mbo_gpu_diagnostics.py  metadata.html  metadata_deep_dive.html  multi_core.html  napari_volume.ipynb  objects.inv  project_template.toml  pyproject.toml  rastermap.html  (+12 more)
.doctrees/: array_types.doctree  assembly.doctree  canonical_metadata.doctree  development.doctree  dff.doctree  environment.pickle  fiber_activity.doctree  file_formats.doctree  forking.doctree  glossary.doctree  image_gallery.doctree  index.doctree  install.doctree  metadata_deep_dive.doctree  multi_core.doctree  rastermap.doctree  user_guide.doctree  venvs.doctree  zarr_io_audit.doctree
_modules/: index.html
_sources/: array_types.md  assembly.md  canonical_metadata.md  development.md  dff.md  file_formats.md  forking.md  glossary.md  image_gallery.md  index.md  install.md  metadata_deep_dive.md  multi_core.md  user_guide.ipynb  venvs.md  zarr_io_audit.md
_static/: custom.css  demo_output.txt  readme.md
api/: core.html  index.html  io.html  usage.html  visualization.html
benchmarks/: 2025-12-10_loading.ipynb  2025-12-11_chunk_scanphase.ipynb  2026-04-07_io-benchmark.ipynb  _chunk_scanphase.ipynb  _loading.ipynb  mboraw_benchmark.ipynb
conda/: env_docs.yml  env_matlab.yml
demos/: 2026-05-06_frame-averaging_ws.ipynb  2026-05-08_split-mroi-groups.ipynb  GUI_maker.ipynb  Untitled.ipynb  assembly.ipynb  behavior.ipynb  benchmark_staging.ipynb  combining_sessions_of_raw_behavioral_jsonables.ipynb  decay_time.ipynb  demo.ipynb  demo_corr_eval_dev_ignorethis.ipynb  dev.ipynb  export_to_video.ipynb  kevin_suite2p_comparison.ipynb  lsp_user_guide.ipynb  mbo_user_guide.ipynb  parallel_io_demo.ipynb  pytest_checks.ipynb  run_assembly.py  run_gui.ipynb  run_pipeline_jeff.ipynb  save_to_s2p_bin.ipynb  test_raw_tiff_demos.ipynb  user_guide.ipynb
dev/: 2025_07_16_kbarber.py  2025_07_19.py  FiberActivityeExtract.m  add_phase_benchmarks.py  add_validation_cells.py  align_zplanes_dev.py  align_zplanes_s3d_dev.py  apply_shifts_3D.py  array_benchmarks.ipynb  bench_phasecorr.py  bench_phasecorr_correctness.py  bench_phasecorr_v2.py  benchmark_backends.ipynb  benchmark_loading.ipynb  benchmark_subsample.ipynb  biology_aware_sine_correction.py  bugfix_full_test.py  calculate_bidir_from_metadata.ipynb  check_snr_nonneg.html  compare_crosstalk.py  correct_bidir_like_colleague.py  create_cheatsheet.py  create_cheatsheet_pdf.py  data.csv  debug_sine_fit.py  dev.ipynb  dev_batch_metadata.py  dev_dandi.py  dev_dff.ipynb  dev_imgui.py  dev_io.ipynb  dev_io2.ipynb  dev_iw-array.py  dev_kbarber_scanphase.ipynb  dev_kerchunk.ipynb  dev_masknmf.ipynb  dev_nwb.ipynb  dev_nwb.py  dev_pollen.ipynb  dev_preview_raw_tiff.ipynb  (+43 more)
dev_for_server/: kb_2025-07-27.py
docs/: array_types.md  assembly.md  conf.py  development.md  dff.md  dim_metadata_refactor.md  fiber_activity.md  file_formats.md  forking.md  gui.md  image_gallery.md  index.md  install.md  isoview.md  metadata_deep_dive.md  rastermap.md  references.bib  requirements.txt  run_gui.md  tiff_doc_gpt.md  venvs.md  zarr_io_audit.md
examples/: windowed_phasecorr.ipynb
gists/: compress.py  demo_compress.py  demo_imgui.py  demo_iter_metadata.py  demo_writers.py  iff_metadata.py  imgui_demo.py  kerchunk.py  metadata_summary.md  save_as.py  save_as_bin.py  save_mp4.py  test_imgui_widgets.py  tiff_metadata.py  tiff_testing.py  util_test.py
home/: .bashrc  binaryfile.md
hpc/: README.md  run_pipeline.py  submit.sh  submit_aggregate.sh  submit_all.sh  submit_array.sh  submit_node.sh
mbo_utilities/: __init__.py  __main__.py  _benchmark.py  _binary.py  _cellpose_model.py  _installation.py  _parsing.py  _protocols.py  _shortcut.py  _suite2p.py  _sysmem.py  _version.py  _writers.py  array_types.py  assembly.py  benchmarks.py  binary.py  binary_s2p.py  classifier.py  cli.py  env_cache.py  file_dialog.py  file_io.py  gpu.py  image.py  install.py  install_checker.py  lazy_array.py  lcp_io.py  log.py  metadata.py  metrics.py  phasecorr.py  pipeline_registry.py  plot_util.py  preferences.py  quick_metrics.py  reader.py  roi.py  squeeze.py  (+7 more)
notebooks/: demo_to_video.ipynb  to_video_examples.html  ws_trial_before_after.ipynb
pollen/: _pollen_analysis.py  example.m  get_metadata.m  pollen_calibration.m  pollen_calibration_mbo.m  pollen_calibration_mbo.py
processing/: 2025-11-04_kbarber_suite2p-comparison.ipynb  2025-12-09_cjennings_crosstalk-method_v1.ipynb  2025-12-18_metadata-test.ipynb  2026-01-16_lsp.ipynb  2026-01-21_lsp.ipynb  2026-02-10_Tolias-Yao_dendrite-segmentation.ipynb  2026-02-21_ywang_fiber-activity.ipynb  2026-03-12_poster_figures.ipynb  2026-03-12_poster_figures.py  2026-03-17_seed-suite2p.ipynb  2026-04-24_bidi_comparison.ipynb  2026-04-25_redetect_existing_bin.ipynb  2026-04-25_redetect_existing_bin.py
scripts/: __init__.py  assemble.slurm  backfill_bdv_pyramid.py  build_docs.py  capture_docs.py  capture_gui_screenshots.py  check_zarr_chunks.py  cnmf_grid_search.sh  compare_pipelines.py  debug_zarr.py  demo_file_formats.py  demo_segmentation_feature.py  dump_registration_timing.py  fix_bdv_multiscales_scale.py  install.bat  install.ps1  install.sh  make_traces_movie.py  mbo.py  mbo_launcher.vbs  multifile_batch.slurm  rechunk_isoview.py  reencode_bdv_zarr.py  run_fuse_v2_resume.py  time_isoview_open.py  tunnel.sbatch  verify_pipeline_robustness.py  verify_segmentation.py  view_suite2p_volume.py
slurm/: assemble.slurm  cnmf_grid_search.sh  grid_search.slurm  multifile_batch.slurm  stage_data.slurm  stage_data_58683.err  stage_data_58683.out  test.sh
tests/: 2025_07_16_kbarber.py  (+44 more)
(+639 files in other folders)
