[build-system]
requires = ["setuptools>=61", "wheel", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "mbo_utilities"
description = "Various utilities for the Miller Brain Observatory"
readme = "README.md"
license = {text = "BSD-3-Clause"}
dynamic = ["version"]
requires-python = ">=3.11, <=3.12"
keywords = ["Microscopy", "ScanImage", "multiROI", "Tiff"]
dependencies = [
	"tifffile>=2025.3.30",
	"scikit-image",
	"zarr>=2.18.3",
	"dask>=2025.3.0",
	"mkl-fft>=1.3.13",
	"imageio[ffmpeg]",
	"matplotlib>=3.10.1",
	"h5py",
	"tqdm",
]

[project.optional-dependencies]
gui = [
	"cmake",
	"imgui-bundle",
	"pyqt5==5.15.11",
	"pyqt5-qt5==5.15.2",
	"glfw",
] 
notebook = [
	"jupyter_rfb>=0.5.1",
	"fastplotlib",
	"pygfx",
	"jupyterlab",
	"sidecar",
	"ipykernel",
	"ipywidgets>=8.0.0,<9",
	"anywidget",
]
napari = ["napari"]
all = [
	"imgui-bundle",
	"pyqt5==5.15.11",
	"pyqt5-qt5==5.15.2",
	"glfw",
	"jupyter_rfb>=0.5.1",
	"fastplotlib",
	"pygfx",
	"jupyterlab",
	"sidecar",
	"ipykernel",
	"ipywidgets>=8.0.0,<9",
	"anywidget",
	"napari",
]

[dependency-groups]
dev = ["pytest", "ruff"]
docs = [
	"sphinx>=6.1.3",
	"docutils>=0.19",
	"nbsphinx",
	"numpydoc",
	"ipykernel",
	"sphinx-autodoc2",
	"sphinx_tippy",
	"sphinx_gallery",
	"sphinx-togglebutton",
	"sphinx-copybutton",
	"sphinx_book_theme",
	"sphinx_design",
	"sphinxcontrib-images",
	"sphinxcontrib-video",
	"jupytext",
	"myst_nb",
	"scipy",
	"scikit-image",
]

# [tool.uv.sources]
# fastplotlib = { git = "https://github.com/fastplotlib/fastplotlib", branch = "main" }
# pygfx = { git = "https://github.com/pygfx/pygfx", branch = "main" }

# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 88
src = ["lbm_suite2p_python"]
exclude = ["docs", "exclude", "demos", "scripts", "versioneer.py"] 

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = ["ALL"]
ignore = [
	"D401",   # First line should be in imperative mood (remove to opt in)
	"COM812", # Missing trailing comma (conflicts with ruff format)
	"ISC001", # Import sorting (conflicts with ruff format)
	"FIX002", # Fixable issue
	"DOC201", # TODO(manzt) enable in follow-up PR; no doc for return type.
	"FBT",    # TODO(manzt): enable in follow-up PR; require bool options to be keyword-only.
]

[tool.ruff.lint.per-file-ignores]
"docs/*.py" = ["D"] 

[tool.setuptools.exclude-package-data]
"*" = ["data/*"]

[tool.coverage.report]
exclude_lines = [
	"pragma: no cover",
	"if TYPE_CHECKING:",
	"@overload",
	"except ImportError",
	"\\.\\.\\.",
	"raise NotImplementedError()"
]

[project.scripts]
mbo = "mbo_utilities.__main__:main"
assemble = "mbo_utilities.assembly:main"

[project.urls]
homepage = "https://github.com/millerbrainobservatory/mbo_utilities"

[tool.setuptools.packages.find]
where = ["."]
include = ["mbo_utilities*"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "mbo_utilities/_version.py"
versionfile_build = "mbo_utilities/_version.py"
tag_prefix = "mbo-utilities-"
parentdir_prefix = "mbo-utilities-"
