[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbo_utilities"
version = "2.6.3"
description = "Various utilities for the Miller Brain Observatory"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12.7,<3.13"
keywords = ["Microscopy", "ScanImage", "multiROI", "Tiff"]
dependencies = [
	"setuptools<81",
	"numpy>=2.2.5,<2.4",
	"pandas",
	"scipy",
	"tifffile>=2025.3.30",
	"scikit-image",
	"zarr>=3.1.3",
	"dask>=2025.3.0",
	"imageio[ffmpeg]",
	"ffmpeg-python",
	"matplotlib>=3.10.1",
	"seaborn>=0.13.2",
	"opencv-python-headless",
	"h5py",
	"tqdm",
	"icecream>=2.1.4",
	"llvmlite>=0.43.0",
	"mkl_fft>=2.0.0",
]

[project.scripts]
mbo = "mbo_utilities.cli:main"
pollen = "pollen.pollen_calibration_mbo:main"
docs = "scripts.build_docs:main"
transfer = "mbo_utilities.transfer:main"

[project.urls]
Homepage = "https://github.com/millerbrainobservatory/mbo_utilities"
Documentation = "https://millerbrainobservatory.github.io/mbo_utilities/index.html"
Repository = "https://github.com/millerbrainobservatory/mbo_utilities"
Issues = "https://github.com/MillerBrainObservatory/mbo_utilities/issues"

[project.optional-dependencies]
# gui/visualization stack (imgui, fastplotlib, qt, wgpu)
gui = [
    "mbo-fastplotlib>=0.7.3",
    "pygfx>=0.15.2",
    "wgpu>=0.28.1,<0.29",
    "rendercanvas>=2.4.2,<2.5",
    "imgui-bundle>=1.92.5",
    "pyqt6>=6.7",
    "pyqt6-sip",
    "pyqtgraph",
    "qtpy",
    "glfw ; sys_platform != 'linux'",
    "jupyter_rfb>=0.5.1",
]
# jupyter environment
notebook = [
    "jupyterlab>=4.2.6",
    "ipykernel",
    "ipywidgets>=8.0.0,<9",
]
suite2p = [
    "numba>=0.60.0",
    "suite2p_mbo>=2.0.1",
]
# suite3d requires cupy installed separately based on cuda version
suite3d = [
    "mbo-suite3d>=0.0.7",
]
rastermap = [
    "rastermap",
]
napari = [
    "napari",
    "napari-ome-zarr",
    "napari-animation",
]
isoview = [
    "pyklb",
]
# torch/cuda must be installed separately with correct index:
#   uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu126
torch = [
    "torch",
    "torchvision",
]
# all processing pipelines (no gui)
processing = [
    "mbo_utilities[suite2p,suite3d,rastermap,torch]",
]
docs = [
    "sphinx>=6.1.3",
    "docutils>=0.19",
    "nbsphinx",
    "numpydoc",
    "ipykernel",
    "sphinx-autodoc2",
    "sphinx_tippy",
    "sphinx_gallery",
    "sphinx-togglebutton",
    "sphinx-copybutton",
    "sphinx_book_theme",
    "sphinx_design",
    "sphinxcontrib-images",
    "sphinxcontrib-video",
    "sphinxcontrib-bibtex",
    "jupytext",
    "myst_nb",
    "pygfx>=0.14.0",
]
# everything
all = ["mbo_utilities[gui,notebook,processing,docs]"]

[tool.ruff]
line-length = 88
src = ["mbo_utilities", "pollen"]
extend-exclude = [
    "*.ipynb",
    "docs",
    "demos",
    "scripts",
    "dev",
    "processing",
    "benchmarks",
    "gists",
    "slurm",
]

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = ["ALL"]
ignore = [
# Complexity rules - not useful for scientific code
    "EM101",  # Exception must not use string literal
    "EM102",  # Exception must not use f-string literal
    "TRY003", # Long exception messages
    "I001",
    "C901",   # Too complex
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
# Annotation rules - optional
    "ANN",    # All missing type annotation rules (ANN001, ANN201, etc.)
    "D401",   # First line should be in imperative mood (remove to opt in)
    "COM812", # Missing trailing comma (conflicts with ruff format)
    "ISC001", # Import sorting (conflicts with ruff format)
    "FIX002", # Fixable issue
    "DOC201", # TODO enable in follow-up PR; no doc for return type.
    "FBT",    # TODO: enable in follow-up PR; require bool options to be keyword-only.
]

[tool.ruff.lint.per-file-ignores]
"docs/*.py" = ["D"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["mbo_utilities*", "pollen*"]
exclude = ["dev*", "gists*", "demos*", "assets*", "docs*", "tests*"]

[tool.setuptools.package-data]
mbo_utilities = ["assets/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["data/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()"
]

[dependency-groups]
dev = [
    "graphviz>=0.21",
    "pillow>=12.1.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pytest>=8.4.2",
]
