[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbo_utilities"
version = "3.2.7"
description = "Various utilities for the Miller Brain Observatory"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12.7,<3.15"
keywords = ["Microscopy", "ScanImage", "multiROI", "Tiff"]
# Slim base: viewer (fastplotlib/imgui/wgpu) + IO + scan-phase only. Heavy
# stacks (suite2p/torch, napari, jupyter, qt) are opt-in extras below so
# `uvx --from mbo_utilities mbo <path>` installs fast. `[all]` restores the
# full set.
dependencies = [
	"setuptools<81",
	"click",
	"numpy>=2.2.5,<2.4",
	"pandas",
	"scipy",
	"tifffile>=2025.3.30",
	"scikit-image",
	"zarr>=3.1.3",
	"dask>=2025.3.0",
	"imageio[ffmpeg]",
	"ffmpeg-python",
	"matplotlib>=3.10.1",
	"opencv-python-headless",
	"h5py",
	"tqdm",
	"icecream>=2.1.4",
	# windowing backend for the fastplotlib canvas: glfw on win/mac, Qt on
	# linux (glfw needs system X11/wayland libs there, so Qt is the default).
	"glfw ; sys_platform != 'linux'",
	"pyqt6>=6.7 ; sys_platform == 'linux'",
	"pyqt6-sip ; sys_platform == 'linux'",
	"pygfx>=0.15.2",
	"llvmlite>=0.43.0",
	"numba>=0.60.0",
	"mbo-fastplotlib>=0.7.3",
	"rendercanvas>=2.4.2,<2.5",
	"imgui-bundle==1.92.5",
	"wgpu>=0.28.1,<0.29",
]

[project.scripts]
mbo = "mbo_utilities.cli:main"
pollen = "pollen.pollen_calibration_mbo:main"
docs = "scripts.build_docs:main"

# imread() dispatch loads every class in this group.
# Third-party packages declare the same group to add formats without editing
# mbo_utilities (see docs/forking.md). Built-ins also self-register on import.
[project.entry-points."mbo_utilities.lazy_arrays"]
lbm = "mbo_utilities.arrays.tiff:LBMArray"
lbm_piezo = "mbo_utilities.arrays.tiff:LBMPiezoArray"
piezo = "mbo_utilities.arrays.tiff:PiezoArray"
single_plane = "mbo_utilities.arrays.tiff:SinglePlaneArray"
scanimage = "mbo_utilities.arrays.tiff:ScanImageArray"
tiff = "mbo_utilities.arrays.tiff:TiffArray"
zarr = "mbo_utilities.arrays.zarr:ZarrArray"
suite2p = "mbo_utilities.arrays.suite2p:Suite2pArray"
h5 = "mbo_utilities.arrays.h5:H5Array"
numpy = "mbo_utilities.arrays.numpy:NumpyArray"
isoview = "mbo_utilities.arrays.isoview.array:IsoviewArray"

[project.urls]
Homepage = "https://github.com/millerbrainobservatory/mbo_utilities"
Documentation = "https://millerbrainobservatory.github.io/mbo_utilities/index.html"
Repository = "https://github.com/millerbrainobservatory/mbo_utilities"
Issues = "https://github.com/MillerBrainObservatory/mbo_utilities/issues"

[project.optional-dependencies]
# suite2p/cellpose pipeline + z-registration + rastermap activity sorting.
# pulls torch (cu126 index below) and the Qt binding the suite2p GUI needs.
suite2p = [
    "suite2p>=1.0.0.1",
    "torch",
    "torchvision",
    "lbm_suite2p_python>=3.2.1",
    "mkl_fft>=2.0.0",
    "rastermap",
    "pyqt6>=6.7",
    "pyqt6-sip",
    "pyqtgraph",
    "qtpy",
]
# alternate napari viewer (needs a Qt binding).
napari = [
    "napari",
    "napari-ome-zarr",
    "napari-animation",
    "pyqt6>=6.7",
    "qtpy",
]
# notebook authoring / inline rendering.
notebooks = [
    "jupyterlab>=4.2.6",
    "ipykernel",
    "ipywidgets>=8.0.0,<9",
    "jupyter_rfb>=0.5.1",
    "seaborn>=0.13.2",
]
isoview = [
    "isoview>=0.4.1",
]
hpc = [
    "submitit>=1.5.0",
]
docs = [
    "sphinx>=6.1.3",
    "docutils>=0.19",
    "nbsphinx",
    "numpydoc",
    "ipykernel",
    "sphinx-autodoc2",
    "sphinx_tippy",
    "sphinx_gallery",
    "sphinx-togglebutton",
    "sphinx-copybutton",
    "sphinx_book_theme",
    "sphinx_design",
    "sphinxcontrib-images",
    "sphinxcontrib-video",
    "sphinxcontrib-bibtex",
    "jupytext",
    "myst_nb",
    "pygfx>=0.14.0",
]
all = ["mbo_utilities[suite2p,napari,notebooks,isoview,hpc]"]

[tool.uv]
# repo dev env keeps the full stack so `uv run mbo` is unchanged.
default-groups = ["dev", "isoview", "hpc", "suite2p", "napari", "notebooks"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.ruff]
line-length = 88
src = ["mbo_utilities", "pollen"]
extend-exclude = [
    "*.ipynb",
    "docs",
    "demos",
    "scripts",
    "dev",
    "processing",
    "benchmarks",
    "gists",
    "slurm",
]

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = ["ALL"]
ignore = [
    "EM101",  # Exception must not use string literal
    "EM102",  # Exception must not use f-string literal
    "TRY003", # Long exception messages
    "I001",
    "C901",   # Too complex
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
# Annotation rules - optional
    "ANN",    # All missing type annotation rules (ANN001, ANN201, etc.)
    "D401",   # First line should be in imperative mood (remove to opt in)
    "COM812", # Missing trailing comma (conflicts with ruff format)
    "ISC001", # Import sorting (conflicts with ruff format)
    "FIX002", # Fixable issue
    "DOC201", # TODO enable in follow-up PR; no doc for return type.
    "FBT",    # TODO: enable in follow-up PR; require bool options to be keyword-only.
]

[tool.ruff.lint.per-file-ignores]
"docs/*.py" = ["D"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["mbo_utilities*", "pollen*"]
exclude = ["dev*", "gists*", "demos*", "assets*", "docs*", "tests*"]

[tool.setuptools.package-data]
mbo_utilities = ["assets/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["data/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()"
]

[dependency-groups]
# mirror the heavy optional-dependencies so the repo dev env (default-groups)
# resolves the full stack for `uv run mbo`. pip users get these via extras.
suite2p = [
    "suite2p>=1.0.0.1",
    "torch",
    "torchvision",
    "lbm_suite2p_python>=3.2.1",
    "mkl_fft>=2.0.0",
    "rastermap",
    "pyqt6>=6.7",
    "pyqt6-sip",
    "pyqtgraph",
    "qtpy",
]
napari = [
    "napari",
    "napari-ome-zarr",
    "napari-animation",
]
notebooks = [
    "jupyterlab>=4.2.6",
    "ipykernel",
    "ipywidgets>=8.0.0,<9",
    "jupyter_rfb>=0.5.1",
    "seaborn>=0.13.2",
]
hpc = [
    "submitit>=1.5.0",
]
dev = [
    "graphviz>=0.21",
    "pillow>=12.1.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pytest>=8.4.2",
]
# Local-only; auto-synced via default-groups so `uv run mbo` uses ../isoview.
isoview = [
    "isoview",
]
